# mvp_todolist_akcit

./: .env.example  .gitignore  GEMINI.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  seed_db.py
.gemini/skills/python-backend-dev-mvp/: SKILL.md
app/: config.py  main.py
app/models/: task.py
app/repositories/: task_repository.py
app/schemas/: task.py
app/services/: priority_advisor.py  task_services.py
app/tests/: conftest.py  test_priority_advisor.py  test_routers.py  test_services.py  test_task_repository.py
docs/: api-diagram.mmd  backlog.md  component-diagram.mmd  escopo-mvp.md
prompts/: prompts-gemini.md
